# library_catalog

./: .env  .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: d5e8baf73685_create_books_table.py
src/library_catalog/: main.py
src/library_catalog/api/: dependencies.py
src/library_catalog/api/v1/routers/: books.py  health.py
src/library_catalog/api/v1/schemas/: book.py  common.py
src/library_catalog/core/: config.py  database.py  exceptions.py
src/library_catalog/data/models/: book.py
src/library_catalog/data/repositories/: base_repository.py  book_repository.py
src/library_catalog/domain/services/: book.service.py  book_service.py
