[tool.poetry]
name = "library-catalog"
version = "0.1.0"
description = ""
authors = ["Anton <johnnycoxd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.136.1"
uvicorn = {extras = ["standard"], version = "^0.46.0"}
sqlalchemy = "^2.0.49"
alembic = "^1.18.4"
asyncpg = "^0.31.0"
pydantic = "^2.13.3"
pydantic-settings = "^2.14.0"
httpx = "^0.28.1"
python-dotenv = "^1.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
black = "^26.3.1"
ruff = "^0.15.12"
mypy = "^1.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
